infra/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: th3-server-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: th3-server
      version: blue
  template:
    metadata:
      labels:
        app: th3-server
        version: blue
    spec:
      containers:
        - name: th3-server-container
          image: th3-server:0.0.1
          ports:
            - containerPort: 8080
