infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: th3-server-service
spec:
  selector:
    app: th3-server
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
